# MCP-SQL

./: README.md  README_CLAUDE_VSCODE.md  pyproject.toml  start_mcp_sql_server.bat
src/mcp_sql_server/: __init__.py  config.py  db.py  server.py
