[project]
name = "mcp-sql-server"
version = "0.1.0"
description = "Servidor MCP profesional para ejecutar SQL (DDL/DML/consulta) en modo desarrollo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MCP-SQL" }]
dependencies = [
  "mcp>=1.9.0",
  "sqlalchemy>=2.0.29",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.1",
  "sqlparse>=0.5.0",
]

[project.scripts]
mcp-sql-server = "mcp_sql_server.server:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sql_server"]
